data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1699.wast
;; 10. **Test Empty Operand Provisioning on Forward Branching**:    - **Description**: Invoke `br_if` targeting a `block` but provide an incorrect operand stack setup.    - **Constraint**: Operand provision must unwind and reconstruct the stack appropriately for the branch target.    - **Incorrect Condition Evaluation**: The forward branch enacted by `br_if` faces improper operand management leading to a structural inconsistency.

(assert_invalid
  (module
    (func $test-forward-branching
      (block
        (i32.const 0)
        (br_if 0)
      )
    )
  )
  "type mismatch"
)